--- a/Netzwerk/Netzwerk.csproj
+++ b/Netzwerk/Netzwerk.csproj
@@ -59,6 +59,7 @@
     <Compile Include="NetzwerkInterface.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Protokoll.cs" />
     <EmbeddedResource Include="Chatview.resx">
       <DependentUpon>Chatview.cs</DependentUpon>
     </EmbeddedResource>
